feat(outreach): implement batch outreach campaigns and refine resume PDF service
Backend & Infrastructure:
- Refactored `BatchOutreachService` to streamline the campaign execution and target processing pipeline.
- Added `OutreachTargetRepository`, `CampaignStatus` enum, and file management services.
- Updated `ResumeController` and endpoint services to integrate with PDF generation.
- Configured OpenRouter and Google AI Gemini configurations.

Data:
- Curated and updated `master_resume.json` by removing legacy academic projects, updating names, and appending deep technical codebase context bullets to active projects.